--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.28.1",
+    "simplebar": "^6.3.0",
+    "simplebar-react": "^3.3.0",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
