--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.28.1",
     "react-toastify": "^11.0.2",
+    "react-transition-group": "^4.4.5",
     "simplebar": "^6.3.0",
     "simplebar-react": "^3.3.0",
     "styled-components": "^6.1.13"
